--- a/srcs/nginx/srcs/index.html
+++ b/srcs/nginx/srcs/index.html
@@ -8,10 +8,10 @@
                 height: 100%;
             }
             body {
-                background: linear-gradient(#543024, #000000);
+                background: linear-gradient(#151823, #252B37);
                 box-sizing: border-box;
                 color: #ffffff;
-                font-family: 'Century Gothic', sans-serif;
+                font-family: 'Source Sans Pro', sans-serif;
                 height: 100%;
                 line-height: 1.5;
                 margin: 0;
@@ -42,5 +42,24 @@
         <h1>ft_services</h1>
         <br/>
         <p>nginx web server is successfully installed and working.</p><br/>
+        <a href="http://192.168.99.52:5050" target="_blank">Wordpress</a>
+        <br/><br/>
+        <a href="http://192.168.99.52:5050/wp-admin/" target="_blank">WP Admin</a>
+        <br/><br/>
+        <p><em>user: root</em></p>
+        <p><em>password: toor</em></p><br/>
+        <a href="http://192.168.99.50:5000" target="_blank">phpMyAdmin</a>
+        <br/><br/>
+        <p><em>user: root</em></p>
+		    <p><em>password: toor</em></p>
+		    <a href="http://192.168.99.53:3000" target="_blank">Grafana</a>
+        <br/><br/>
+        <p><em>user: admin</em></p>
+        <p><em>password: passwd</em></p>
+        <a>Filezilla</a>
+        <br/><br/>
+        <p><em>server: 192.168.99.54</em></p>
+        <p><em>user: root</em></p>
+        <p><em>password: toor</em></p>
     </body>
 </html>
